Updating scripts, adding files

--- a/environment/stack/environment.ini
+++ b/environment/stack/environment.ini
@@ -1,6 +1,11 @@
 ;;
-;; YAWDS environment configuration file
+;; Environment configuration file
 ;; Feel free to customize it for your own project
+;; See the list of available options: 
+;; https://github.com/AdesisNetlife/yawds
+;;
+;; NOTE:
+;; You don't have to edit this file unless you know what you are doing
 ;;
 
 [general]
@@ -8,6 +13,10 @@ name = YAWDS development environment
 shortname = YAWDS
 prompt = [yawds %YAWDS_VERSION%] $P $_$G$S
 console_color = 2
+
+[requisites]
+;; requires git must be installed in the system
+git = true
 
 [install]
 ;; display a custom welcome message on install process
@@ -35,17 +44,8 @@ git = true
 ;https_proxy=http://ssl.proxy:3128
 ;no_proxy=.company,.google.com
 
-[requirements]
-;; requires git must be already installed in the system
-git = true
-
 [update]
 enabled = true
-check_url = http://raw.github.com/adesisnetlife/yawds/master/environment/VERSION
-check_url_auth = false
+check_url = https://raw.github.com/AdesisNetlife/yawds/master/environment/stack/VERSION
+check_url_auth = true
 check_on_startup = true
-
-[packages]
-;; define the relative path for node or ruby packages
-install_directory = packages/
-
