--- a/environment/stack/packages.ini
+++ b/environment/stack/packages.ini
@@ -2,8 +2,16 @@
 ;; Packages provisioning configuration
 ;;
 
+;; define the relative path for node or ruby packages installtion
+;; you probably do not need to change this option
+install_dir = packages
+
 [provision]
+;; enable/disable packages provisioning
 enabled = true
+;; this option allow you to force to update packages 
+;; from latest versions on each environment start
+keep_updated = false
 
 [npm]
 bower = latest
@@ -12,3 +20,5 @@ yo = latest
 
 [gem]
 compass = latest
+
+;; todo: support for custom packages installation
