--- a/environment/stack/environment.ini
+++ b/environment/stack/environment.ini
@@ -1,11 +1,5 @@
 ;;
 ;; Environment configuration file
-;; Feel free to customize it for your own project
-;; See the list of available options: 
-;; https://github.com/AdesisNetlife/yawds
-;;
-;; NOTE:
-;; You don't have to edit this file unless you know what you are doing
 ;;
 
 [general]
@@ -47,5 +41,5 @@ git = true
 [update]
 enabled = true
 check_url = https://raw.github.com/AdesisNetlife/yawds/master/environment/stack/VERSION
-check_url_auth = true
+check_url_auth = false
 check_on_startup = true
