--- a/environment/stack/environment.ini
+++ b/environment/stack/environment.ini
@@ -43,3 +43,7 @@ enabled = true
 check_url = https://raw.github.com/AdesisNetlife/yawds/master/environment/stack/VERSION
 check_url_auth = false
 check_on_startup = true
+
+[scripts]
+;on_start=stack\scripts\custom.bat
+;on_update=stack\scripts\custom.bat
