--- a/environment/stack/environment.ini
+++ b/environment/stack/environment.ini
@@ -26,8 +26,8 @@ force_proxy = false
 auth = true
 ;auth_confirm = Do you want to enter your <company> auth credentials?
 ;auth_username = Please, enter your <company>'s user credentials
-;; ask the user for his proxy auth credentials
-proxy_auth = false
+;; ask the user about proxy auth credentials
+proxy_auth = true
 ;; ask to configure git (user, email and credentials storage)
 git = true
 
