--- a/environment/stack/packages.ini
+++ b/environment/stack/packages.ini
@@ -9,7 +9,7 @@ install_dir = packages
 [provision]
 ;; enable/disable packages provisioning
 enabled = true
-;; this option allow you to force to update packages 
+;; this option allows to force to update Node/Ruby packages 
 ;; from latest versions on each environment start
 keep_updated = false
 
