--- a/environment/stack/environment.ini
+++ b/environment/stack/environment.ini
@@ -23,7 +23,7 @@ force_proxy = false
 
 [install.ask]
 ;; ask the user about his network auth credentials
-auth = true
+auth = false
 ;auth_confirm = Do you want to enter your <company> auth credentials?
 ;auth_username = Please, enter your <company>'s user credentials
 ;; ask the user about proxy auth credentials
