Updating git setup script

--- a/environment/stack/environment.ini
+++ b/environment/stack/environment.ini
@@ -28,7 +28,7 @@ auth = false
 ;auth_username = Please, enter your <company>'s user credentials
 ;; ask the user about proxy auth credentials
 proxy_auth = true
-;; ask to configure git (user, email and credentials storage)
+;; ask to configure git config (user, email and credentials storage)
 git = true
 
 [proxy]
