Updating proxy setup script. Docs changes

--- a/environment/stack/environment.ini
+++ b/environment/stack/environment.ini
@@ -45,4 +45,6 @@ check_url_auth = false
 check_on_startup = true
 
 [scripts]
-;on_start=stack\scripts\custom.bat
+;; custom execution scripts
+;after_start=stack\scripts\post_start.bat
+;after_install=stack\scripts\post_install.bat
