Post-process script

--- a/environment/stack/environment.ini
+++ b/environment/stack/environment.ini
@@ -45,6 +45,6 @@ check_url_auth = false
 check_on_startup = true
 
 [scripts]
-;; custom execution scripts
-;after_start=stack\scripts\post_start.bat
-;after_install=stack\scripts\post_install.bat
+;; custom execution scripts, with relative path from stack/ directory
+;after_start=scripts\post_start.bat
+;after_install=scripts\post_install.bat
