--- a/environment/stack/environment.ini
+++ b/environment/stack/environment.ini
@@ -14,11 +14,11 @@ git = true
 
 [install]
 ;; display a custom welcome message on install process
-message = Welcome to YAWSD development environment
-;; set true if the user computer must be authenticated 
+message = Welcome to YAWDS development environment
+;; set true if the user computer need to be authenticated 
 ;; to access to network resources, like source repositories
 force_auth = false
-;; set true if the user computer will be behind a Web proxy
+;; set true if the user computer will be always behind a Web proxy
 force_proxy = false
 
 [install.ask]
